# mini-wallet

./: Cargo.toml  README.md  build.rs
proto/: wallet.proto
src/: api.rs  core.rs  eth.rs  fs.rs  grpc.rs  infra.rs  lib.rs  main.rs  model.rs  rpc.rs  server.rs  wallet.rs
src/wallet/: wallet_balance.rs  wallet_list.rs  wallet_refresh.rs  wallet_track.rs  wallet_untrack.rs
