[package]
name = "mini-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bincode = "2.0.1"
hex = "0.4.3"
prost = "0.14.1"
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-reflection = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[build-dependencies]
tonic-prost-build = "0.14.2"
